<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightPink">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="CREATE NEW"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="@dimen/_16sdp"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross_26"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_20sdp"
            android:layout_below="@+id/constraintlayout1">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/rbSnippet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSnippet"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:textSize="@dimen/_15ssp" />

                <RadioButton
                    android:id="@+id/rbSPSocial"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSPSocial"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:textSize="@dimen/_15ssp" />
            </RadioGroup>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtlblCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCancel"
                android:padding="@dimen/_12ssp"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/lightPink"
                app:layout_constraintBottom_toBottomOf="@+id/btnContinue"
                app:layout_constraintEnd_toStartOf="@+id/btnContinue"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                />
            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblContinue"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:background="@drawable/pink_button_round_corner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>