<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkGray">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/lblPointsAndBadges"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:padding="@dimen/_16sdp"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cross_26"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_20sdp"
            android:layout_below="@+id/constraintlayout1">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtlblMyPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMyPoints"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMyPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="250"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/txtlblMyPoints"
                app:layout_constraintStart_toStartOf="@id/txtlblMyPoints"
                app:layout_constraintEnd_toEndOf="@+id/txtlblMyPoints"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRedeemPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Redeem Points"
                android:textSize="@dimen/_8ssp"
                android:padding="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAllCaps="false"
                android:background="@drawable/corner_round_button"
                app:layout_constraintTop_toBottomOf="@+id/txtMyPoints"
                app:layout_constraintStart_toStartOf="@id/txtlblMyPoints"
                app:layout_constraintEnd_toEndOf="@+id/txtlblMyPoints"
                />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/navigationicon"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/btnRedeemPoints"
                app:layout_constraintStart_toStartOf="@+id/txtlblMyPoints"
                app:layout_constraintEnd_toEndOf="@+id/txtlblMyPoints"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRedemptionBenefits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Redemption Benefits"
                android:textSize="@dimen/_8ssp"
                android:padding="@dimen/_8sdp"
                android:textAllCaps="false"
                android:background="@drawable/corner_round_button"
                app:layout_constraintTop_toBottomOf="@+id/imageview"
                app:layout_constraintStart_toStartOf="@id/imageview"
                app:layout_constraintEnd_toEndOf="@+id/imageview"
                />
            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="@dimen/_160sdp"
                android:background="@color/darkGray"
                app:layout_constraintTop_toTopOf="@id/txtlblMyPoints"
                app:layout_constraintBottom_toBottomOf="@+id/btnRedemptionBenefits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="NotSibling" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtlblMyBadges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblMyBadges"
                app:layout_constraintTop_toTopOf="@+id/txtlblMyPoints"
                app:layout_constraintBottom_toBottomOf="@+id/txtlblMyPoints"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>